--- a/vk-table/index.html
+++ b/vk-table/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>vk</title>
+    <title>VK-TABLE</title>
     <link rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
