added comment to index

--- a/vk-table/index.html
+++ b/vk-table/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
+<!-- i am comment -->
 <div class="container">
     <table class="header">
         <tr>
