--- a/vk-table/index.html
+++ b/vk-table/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+    <div class="header"></div>
     <table class="header">
         <tr>
             <td class="logo"><a href="">
